tests/stdlib/good/println.hel
// @name println
// @phase stdlib
// @expect success

import std.io

main = () : IO<()> {
    io.println("Hello Helium");
}
