tests/stdlib/bad/io_arity.hel
// @name io_arity
// @phase stdlib
// @expect error

import std.io

main = () : IO<()> {
    io.println("one", "two")
}
